@@ -1,3 +1,10 @@
+Mon Mar  3 02:53:53 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* io.c (rb_io_flush_raw, rb_io_fsync): [EXPERIMENTAL] remove force
+	  syncing for Win32 to speed up IO.  this may break some tests, and
+	  they'll be fixed later.
+	  [ruby-core:58570] [Bug #9153]
+
 Mon Mar  3 00:17:43 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/ruby/test_backtrace.rb: get rid of warnings.  unused variable,
